# text2sql

./: .env.template  .gitignore  DECOMPOSITION_SUMMARY.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  client.html  config.py  pyproject.toml  requirements.py  test_application.py
app/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  __init__.py  config.py  db.py  docker-compose.yml  examples.py  main.py  quickstart.sh  requirements.txt  streamlit_app.py
app/agents/: __init__.py  executor.py  llm.py  planner.py  sql_generator.py  summarizer.py  validator.py
app/graph/: __init__.py  workflow.py
app/prompts/: __init__.py
app/sql/: seed.sql
app/tools/: __init__.py  db_tools.py
