[project]
name = "text2sql"
version = "0.1.0"
description = "End-to-end Natural Language to SQL Query Generation Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LLM and AI
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    "langgraph>=0.0.30",
    
    # Web Frameworks
    "fastapi>=0.104.0",
    "streamlit>=1.28.0",
    "uvicorn[standard]>=0.24.0",
    
    # Data Processing & Validation
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP & Environment
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg2-binary>=2.9.0",
    
    # Utilities
    "validators>=0.22.0",
    "python-dateutil>=2.8.0",
]

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.workspace]
members = [
    "task3",
]
